Fix header wrapping on accordion button

--- a/_sass/_bootstrap-accordion.scss
+++ b/_sass/_bootstrap-accordion.scss
@@ -17,6 +17,7 @@
         width: 100%;
         padding-left: 0;
         text-transform: none;
+        white-space: normal;
         font-size: inherit;
         font-weight: inherit;
       }
